syntax = "proto3";

package federation;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "grpc/federation/federation.proto";

option go_package = "example/federation;federation";

option (grpc.federation.file)= {
  import: ["post/post.proto", "user/user.proto"]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  option (.grpc.federation.message) = {
    def {
      name: "post"
      message {
        name: "Post"
        args { name: "id", by: "$.id" }
      }
    }
    def { name: "date" by: "grpc.federation.time.date(2023, 12, 25, 12, 10, 5, 0, grpc.federation.time.UTC())" }
    def { name: "rand_source" by: "grpc.federation.rand.newSource(date.unix())" }
    def { name: "fixed_rand" by: "grpc.federation.rand.new(rand_source)" }
    def { name: "uuid" by: ".grpc.federation.uuid.newRandomFromRand(fixed_rand)" }
    def { name: "loc" by: "grpc.federation.time.loadLocation('Asia/Tokyo')"}
    def { name: "jp_time" by: "grpc.federation.time.date(2023, 12, 25, 12, 10, 5, 0, loc)" }
    def { name: "value1" by: "grpc.federation.metadata.incoming()['key1'][0]"}
    def { name: "a" message { name: "A" } }
    def { name: "sorted_values" by: "[4, 1, 3, 2].sortAsc(v, v)" }
    def { name: "sorted_items" by: "[user.Item{location:user.Item.Location{addr1:'a'}}, user.Item{location:user.Item.Location{addr1:'b'}}].sortDesc(v, v.location.addr1)" }
    def { name: "map_value" by : "{1: 'a', 2: 'b', 3: 'c'}" }
    def { name: "null_value" by: "null" }
    def { by: "grpc.federation.log.info('output federation log', {'post_message': post})" }
  };
  Post post = 1 [(grpc.federation.field).by = "post"];
  string str = 2 [(grpc.federation.field).by = "'hello'"];
  string uuid = 3 [(grpc.federation.field).by = "uuid.string()"];
  string loc = 4 [(grpc.federation.field).by = "loc.string()"];
  string value1 = 5 [(grpc.federation.field).by = "value1"];
  string item_type_name = 6 [(grpc.federation.field).by = "Item.ItemType.name(Item.ItemType.ITEM_TYPE_1)"];
  string location_type_name = 7 [(grpc.federation.field).by = "Item.Location.LocationType.name(Item.Location.LocationType.LOCATION_TYPE_1)"];
  string user_item_type_name = 8 [(grpc.federation.field).by = "user.Item.ItemType.name(user.Item.ItemType.ITEM_TYPE_2)"];
  Item.ItemType item_type_value_enum = 9 [(grpc.federation.field).by = "user.Item.ItemType.value('ITEM_TYPE_1')"];
  int32 item_type_value_int = 10 [(grpc.federation.field).by = "user.Item.ItemType.value('ITEM_TYPE_1')"];
  Item.ItemType item_type_value_cast = 11 [(grpc.federation.field).by = "1"];
  int32 location_type_value = 12 [(grpc.federation.field).by = "Item.Location.LocationType.value('LOCATION_TYPE_1')"];
  int32 user_item_type_value = 13 [(grpc.federation.field).by = "user.Item.ItemType.value('ITEM_TYPE_2')"];
  A a = 14 [(grpc.federation.field).by = "a"];
  repeated int32 sorted_values = 15 [(grpc.federation.field).by = "sorted_values"];
  repeated Item sorted_items = 16 [(grpc.federation.field).by = "sorted_items"];
  map<int32, string> map_value = 17 [(grpc.federation.field).by = "map_value"];
  google.protobuf.DoubleValue double_wrapper_value = 18 [(grpc.federation.field).by = "google.protobuf.DoubleValue{value: 1.23}"];
  google.protobuf.FloatValue float_wrapper_value = 19 [(grpc.federation.field).by = "google.protobuf.FloatValue{value: 3.45}"];
  google.protobuf.Int64Value i64_wrapper_value = 20 [(grpc.federation.field).by = "google.protobuf.Int64Value{value: 1}"];
  google.protobuf.UInt64Value u64_wrapper_value = 21 [(grpc.federation.field).by = "google.protobuf.UInt64Value{value: uint(2)}"];
  google.protobuf.Int32Value i32_wrapper_value = 22 [(grpc.federation.field).by = "google.protobuf.Int32Value{value: 3}"];
  google.protobuf.UInt32Value u32_wrapper_value = 23 [(grpc.federation.field).by = "google.protobuf.UInt32Value{value: uint(4)}"];
  google.protobuf.BoolValue bool_wrapper_value = 24 [(grpc.federation.field).by = "google.protobuf.BoolValue{value: true}"];
  google.protobuf.StringValue string_wrapper_value = 25 [(grpc.federation.field).by = "google.protobuf.StringValue{value: 'hello'}"];
  google.protobuf.BytesValue bytes_wrapper_value = 26 [(grpc.federation.field).by = "google.protobuf.BytesValue{value: bytes('world')}"];
  string hello = 27 [(grpc.federation.field).by = "'hello\\nworld'"];
  google.protobuf.Timestamp null_timestamp = 28 [(grpc.federation.field).by = "null"];
  google.protobuf.Timestamp null_timestamp2 = 29 [(grpc.federation.field).by = "null_value"];
  google.protobuf.Timestamp null_timestamp3 = 30 [(grpc.federation.field).by = "true ? null : google.protobuf.Timestamp{}"];
  string jp_loc = 31 [(grpc.federation.field).by = "jp_time.location().string()"];
}

message A {
  message B {
    option (grpc.federation.message) = {
      def [
        { name: "foo" message: { name: "A.B.C" args { name: "type" by: "'foo'" } } },
        { name: "bar" message: { name: "A.B.C" args { name: "type" by: "'bar'" } } },
        { if: "foo.type == 'foo'" by: "grpc.federation.log.info('output federation log', {'messages': [foo, bar], 'message_map': {'foo': foo, 'bar': bar}})" },
        { by: "grpc.federation.log.add({'foo_type': foo.type, 'bar_type': bar.type})" }
      ]
    };
    message C {
      string type = 1 [(grpc.federation.field).by = "$.type"];
    }
    C foo = 1 [(grpc.federation.field).by = "foo"];
    C bar = 2 [(grpc.federation.field).by = "bar"];
  }
  option (grpc.federation.message) = {
    def { name: "b" message { name: "A.B" } }
  };
  B b = 1 [(grpc.federation.field).by = "b"];
}

message Post {
  option (grpc.federation.message) = {
    def [
      {
        name: "res"
        call {
          method: "post.PostService/GetPost"
          request { field: "id", by: "$.id" }      
          timeout: "10s"
          retry {
            constant {
              interval: "2s"
              max_retries: 3
            }
          }
        }
      },
      { name: "post", by: "res.post", autobind: true },
      {
        name: "user"
        message {
          name: "User"
          args { inline: "post" }
        }
      }
    ]
  };
  string id = 1;
  string title = 2;
  string content = 3;
  User user = 4 [(grpc.federation.field).by = "user"];
}

message User {
  option (grpc.federation.message) = {
    def [
      {
        name: "res"
        call {
          method: "user.UserService/GetUser"
          request [
            { field: "id", by: "$.user_id" },
            { field: "type" by: "user.Item.ItemType.value('ITEM_TYPE_1')" }
          ]
          timeout: "20s"
          retry {
            exponential {
              initial_interval: "1s"
              randomization_factor: 0.7
              multiplier: 1.7
              max_interval: "30s"
              max_retries: 3
            }
          }
        }
      },
      { name: "user", by: "res.user", autobind: true }
    ]
  };
  string id = 1;
  string name = 2;
  repeated Item items = 3;
  map<string, google.protobuf.Any> profile = 4;
  oneof attr {
    AttrA attr_a = 5;
    AttrB b = 6;
  }
  message AttrA {
    option (grpc.federation.message).alias = "user.User.AttrA";
    string foo = 1;
  }
  message AttrB {
    option (grpc.federation.message).alias = "user.User.AttrB";
    bool bar = 2;
  }
}

message Item {
  option (grpc.federation.message).alias = "user.Item";

  enum ItemType {
    option (grpc.federation.enum).alias = "user.Item.ItemType";

    ITEM_TYPE_UNSPECIFIED = 0;
    ITEM_TYPE_1 = 1;
    ITEM_TYPE_2 = 2;
    ITEM_TYPE_3 = 3;
  }
  message Location {
    option (grpc.federation.message).alias = "user.Item.Location";

    string addr1 = 1;
    string addr2 = 2;
    oneof addr3 {
      AddrA addr_a = 3;
      AddrB b = 4;
    };
    message AddrA {
      option (grpc.federation.message).alias = "user.Item.Location.AddrA";
      string foo = 1;
    }
    message AddrB {
      option (grpc.federation.message).alias = "user.Item.Location.AddrB";
      int64 bar = 1;
    }

    enum LocationType {
      LOCATION_TYPE_0 = 0;
      LOCATION_TYPE_1 = 1;
    }
  }
  string name = 1;
  ItemType type = 2;
  int64 value = 3;
  Location location = 4;
}
